src/component/diff_viewer/snapshots/envision__component__diff_viewer__tests__view_unified_empty.snap
---
source: src/component/diff_viewer/tests.rs
expression: terminal.backend().to_string()
---
┌ Diff ──────────────────────────────────────────┐
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
