src/component/diff_viewer/snapshots/envision__component__diff_viewer__tests__view_with_line_numbers.snap
---
source: src/component/diff_viewer/tests.rs
expression: terminal.backend().to_string()
---
┌ Diff (+3, -2) ───────────────────────────────────────────┐
│@@ -1,5 +1,6 @@                                           │
│   1    1  fn main() {                                    │
│   2      -    println!("hello");                         │
│   3      -    return;                                    │
│        2 +    println!("world");                         │
│        3 +    eprintln!("debug");                        │
│        4 +    return Ok(());                             │
│   4    5  }                                              │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
